[gd_scene load_steps=2 format=3 uid="uid://cgm26g34oj61l"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_qf0r3"]

[node name="Main_menu" type="Control"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 8
script = ExtResource("1_qf0r3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -155.0
offset_right = 180.0
offset_bottom = -19.0
grow_vertical = 0

[node name="Start_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Quit_button")
focus_neighbor_bottom = NodePath("../Start_button2")
text = "Start solo"

[node name="Start_button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Start_button")
focus_neighbor_bottom = NodePath("../Options_button")
text = "Start multiplayer"

[node name="Options_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Start_button2")
focus_neighbor_bottom = NodePath("../Quit_button")
text = "Options"

[node name="Quit_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Options_button")
focus_neighbor_bottom = NodePath("../Start_button")
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Start_button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Start_button2" to="." method="_on_start_multi_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Options_button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit_button" to="." method="_on_quit_button_pressed"]
